Overflow bug fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -34,6 +34,9 @@ body{
 }
 
 .App {
+  overflow-x: hidden;
+  overflow-y: visible;
+
   display: grid;
   grid-template-rows: [header-start] 6rem  [header-end full-start] calc(100vh - 6rem) [full-end]; 
   grid-template-columns: 35vw 65vw;
